src/components/page.less
@page-header-content-min-height: 32px;
@page-header-button-spacing: 6px;

.Page {
  margin: 0;
  padding: 0;
  display: flex;
  min-height: 100vh;
  position: relative;
  flex-direction: column;
  min-width: @global-min-page-width;
  max-width: 100vw;
}

.Page-headerArea {
  top: 0;
  flex: none;
  width: 100%;
  z-index: 1000;
  position: sticky;
  background-color: @grey-1;
  box-shadow: 0 2px 8px @grey-4;
  margin-bottom: @global-content-padding;

  &.Page-headerArea--fullScreen {
    box-shadow: none;
  }
}

.Page-header {
  display: flex;
  align-items: center;
  min-height: @page-header-content-min-height + (2* @global-content-padding);
}

.Page-headerContent {
  display: block;
  padding: @global-content-padding;

  &.Page-headerContent--left {
    flex: 1 0 0%;
    display: flex;
    align-items: center;
    justify-content: flex-start;
  }

  &.Page-headerContent--center {
    flex: none;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  &.Page-headerContent--right {
    flex: 1 0 0%;
    display: flex;
    align-items: center;
    justify-content: flex-end;
  }
}

.Page-headerButton {
  margin-right: @page-header-button-spacing;

  &:last-child {
    margin-right: 0;
  }

  &.ant-btn > span {
    @media @phone {
      display: none;
    }
  }
}

.Page-loginLogoutButton {
  cursor: pointer;
  margin-left: (2.5 * @page-header-button-spacing);
}

.Page-contentArea {
  flex: 1 0 0%;
  display: flex;
  align-items: flex-start;

  &.Page-contentArea--fullScreen {
    align-items: center;
  }
}

.Page-content {
  margin: 0 auto;
  width: 100%;
  min-width: @global-min-page-width;
  max-width: @global-content-width-wide;

  &.Page-content--fullScreen {
    max-width: @global-content-width-narrow;
  }
}

.Page-footer {
  flex: none;
  display: flex;
  z-index: 1000;
  align-items: center;
  justify-content: center;
  padding: @global-content-padding;
}

.Page-footerLine {
  display: inline-block;

  @media @phone {
    display: block;
    text-align: center;
  }

  &:not(:last-child)::after {
    content: "\00A0\00A0|\00A0\00A0";

    @media @phone {
      content: none;
    }
  }
}

.Page-footerLink {
  display: inline-block;
  white-space: nowrap;

  &:not(:last-child)::after {
    content: "\00A0\00A0|\00A0\00A0";
  }
}

